// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalNavbar hideGlobalSearchInput 1`] = `
<div
  className="global-navbar global-navbar--bg border-bottom py-1"
>
  <div
    className="global-navbar__logo-link global-navbar__logo-animated"
  >
    <img
      className="global-navbar__logo"
      src="/.assets/img/sourcegraph-mark.svg"
    />
  </div>
  <div
    className="nav-item flex-1"
  >
    <a
      className="nav-link"
      to="/search"
    >
      Search
    </a>
  </div>
</div>
`;

exports[`GlobalNavbar lowProfile 1`] = `
<div
  className="global-navbar  py-1"
>
  <div
    className="flex-1"
  />
</div>
`;

exports[`GlobalNavbar normal 1`] = `
<div
  className="global-navbar global-navbar--bg border-bottom py-1"
>
  <div
    className="global-navbar__logo-link global-navbar__logo-animated"
  >
    <img
      className="global-navbar__logo"
      src="/.assets/img/sourcegraph-mark.svg"
    />
  </div>
</div>
`;
